Adds new recipies pages all pages are connected
Finished Breakfast lunch and dessert recipies

--- a/odin-recipies/INDEX.html
+++ b/odin-recipies/INDEX.html
@@ -7,33 +7,65 @@
 </head>
 
 <body>
-    <h1 style="text-align:center;">"Odin Recipies"</h1>
-    <ul style="list-style:none;">
-        <li><a href="./pg/breakfast.html">
-                <p style="text-align:center;">Breakfast</p>
-            </a></li>
-        <img src="./pic/brkfst.jpeg" height="10%" width="10%" class="center">
+    <div class="navContainer">
+        <input type="text" placeholder="Search...">
+        <nav>
+            <ul>
+                <li><a href="./INDEX.html">Home</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+
+        </nav>
+        <button>button</button>
+    </div>
+
+    <h1 class="pgTtl">"Odin Recipies"</h1>
+    <p style="text-align:center;" class="ser"><em>Search By Meal</em></p>
+    <div class="mealOpt mnBdy">
+
+        <div class=" mealOpt">
+            <div class="myColumn">
+
+                <a href="./pg/breakfast.html"><img src="./pic/brkfst.jpeg" class="rImg">
+                    <p style="text-align:center;">Breakfast</p>
+                </a>
+            </div>
+            <br />
+            <div class="myColumn">
+                <a href="./pg/lunch.html"><img src="./pic/lunch.jpeg" class="rImg">
+                    <p style="text-align:center;">Lunch</p>
+                </a>
+            </div>
+            <br />
+            <div class="myColumn">
+
+                <a href="./pg/dinner.html"><img src="./pic/dnr.jpeg" class="rImg">
+                    <p style="text-align:center;">Dinner</p>
+                </a>
+            </div>
+            <br />
+            <div class="myColumn">
+
+                <a href="./pg/snack.html"><img src="./pic/snk.jpeg" class="rImg">
+                    <p style=" text-align:center;">Snacks</p>
+                </a>
+            </div>
+            <br />
+            <div class="myColumn">
+
+                <a href="./pg/dessert.html "><img src="./pic/dsrt.jpeg" class="rImg">
+                    <p style="text-align:center;">Desserts</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <p style="text-align: center;">Cooking Ideas</p>
         <br />
-        <li><a href="./pg/lunch.html">
-                <p style="text-align:center;">Lunch</p>
-            </a></li>
-        <img src="./pic/lunch.jpeg" height="10%" width="10%" class="center">
-        <br />
-        <li><a href="./pg/dinner.html">
-                <p style="text-align:center;">Dinner</p>
-            </a></li>
-        <img src="./pic/dnr.jpeg" height="10%" width="10%" class="center">
-        <br />
-        <li><a href="./pg/snack.html">
-                <p style="text-align:center;">Snacks</p>
-            </a></li>
-        <img src="./pic/snk.jpeg" height="10%" width="10%" class="center">
-        <br />
-        <li><a href="./pg/dessert.html ">
-                <p style="text-align:center;">Desserts</p>
-            </a></li>
-        <img src="./pic/dsrt.jpeg" height="10%" width="10%" class="center">
-    </ul>
+        <p Style="text-align:center;"><strong>(Only Breakfast lunch and Desserts have pages)</strong></p>
+    </div>
 
 </body>
 
