--- a/odin-recipies/pg/snack.html
+++ b/odin-recipies/pg/snack.html
@@ -2,12 +2,28 @@
 <html>
 
 <head>
-    <title>Snacks</title>
-
+    <title>snack</title>
+    <link rel="stylesheet" href="../css/recipies.css">
 </head>
 
 <body>
-    <h1>Snacks</h1>
+    <div class="navContainer">
+        <input type="text" placeholder="Search...">
+        <nav>
+            <ul>
+                <li><a href="../INDEX.html">Home</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+
+        </nav>
+        <button>button</button>
+    </div>
+
+    <h1 class="pgTtl">Snacks</h1>
+    <div>
+        <a href="../INDEX.html"><img src="../pic/undrconst.jpeg" class="rImg"></a>
+    </div>
 
 </body>
 
