--- a/odin-recipies/rec/brk/frenchtoast.html
+++ b/odin-recipies/rec/brk/frenchtoast.html
@@ -8,20 +8,43 @@
 </head>
 
 <body>
-    <h1>French Toast</h1>
-    <img src="../../pic/ft.png" alt="A picture of french toast" class="center">
-    <h2>Description here</h2>
-    <p>Ingredients</p>
-    <ul>
-        <li>Bread</li>
-        <li>Eggs</li>
-    </ul>
-    <p>Steps</p>
-    <ol>
-        <li></li>
-        <li></li>
-    </ol>
+    <div class="navContainer">
+        <input type="text" placeholder="Search...">
+        <nav>
+            <ul>
+                <li><a href="../../INDEX.html">Home</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">About</a></li>
+            </ul>
 
+        </nav>
+        <button>button</button>
+    </div>
+    <h1 style="text-align:center;">French Toast</h1>
+    <img src="../../pic/ft.png" alt="A picture of french toast" class="sqImg">
+    <div style="text-align:center;" class="rcpPg">
+        <h2>Description here</h2>
+        <p>Ingredients</p>
+        <ul class="center">
+            <li>Bread</li>
+            <li>Eggs</li>
+            <li>Milk</li>
+            <li>Vanilla and Cinnimon</li>
+            <li>Salt</li>
+            <li>Butter</li>
+
+        </ul>
+    </div>
+    <div class="rcpPg">
+        <p style="text-align: center;"><em><strong>Directions</strong></em></p>
+        <ol>
+            <li>Whisk milk, eggs, vanilla cinnamon together in a shallow bowl</li>
+            <li>Lightly butter griddle and put on meadium-high heat</li>
+            <li>Dunk bread in egg mixture, soaking both sides throughly.</li>
+            <li>Transfer to heated skillet cooking until golden brown on both side.(3-4 minutes per side)</li>
+            <li><em>Serve Hot</em></li>
+        </ol>
+    </div>
 </body>
 
 </html>
