--- a/pg/dinner.html
+++ b/pg/dinner.html
@@ -11,7 +11,7 @@
         <input type="text" placeholder="Search...">
         <nav>
             <ul>
-                <li><a href="../INDEX.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
@@ -24,7 +24,7 @@
     <div>
         <ul>
 
-            <li><a href="../INDEX.html"><img src="../pic/undrconst.jpeg" class="rImg"></a>
+            <li><a href="../index.html"><img src="../pic/undrconst.jpeg" class="rImg"></a>
             </li>
         </ul>
     </div>
