--- a/pg/snack.html
+++ b/pg/snack.html
@@ -11,7 +11,7 @@
         <input type="text" placeholder="Search...">
         <nav>
             <ul>
-                <li><a href="../INDEX.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
@@ -22,7 +22,7 @@
 
     <h1 class="pgTtl">Snacks</h1>
     <div>
-        <a href="../INDEX.html"><img src="../pic/undrconst.jpeg" class="rImg"></a>
+        <a href="../index.html"><img src="../pic/undrconst.jpeg" class="rImg"></a>
     </div>
 
 </body>
