--- a/rec/lun/grnbeansld.html
+++ b/rec/lun/grnbeansld.html
@@ -12,7 +12,7 @@
         <input type="text" placeholder="Search...">
         <nav>
             <ul>
-                <li><a href="../../INDEX.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
